# UtilityLibrary

./: .gitignore  CMakeLists.txt  Makefile  UtilityLibrary.pro  build.pri  builder  cleaner  use.pri
include/UtilityLibrary/: all  defines_info  encrypt  generators  main  point  process  types
lib_include/UtilityLibrary/: appcore  hashing  logger  point  process
src/: basicutils.cpp  basicutils.h  exchangepacket.h  extendedtypes.cpp  extendedtypes.h  generators.cpp  generators.h  main_utils.cpp  main_utils.h  point.cpp  point.h  serverinstance.cpp  serverinstance.h  src.pri  tcpclientinstance.cpp  tcpclientinstance.h  tcpserverinstance.cpp  tcpserverinstance.h
src/AppCore/: logging.cpp  logging.hpp  mainapp.cpp  mainapp.hpp  message.hpp  module.cpp  module.hpp  moduleconfiguration.hpp  modulerequestcodes.hpp
src/IPC/: msgqueue.cpp  msgqueue.h
src/USB/: usbdevhandler.cpp  usbdevhandler.h
src/encrypt/: encryption.cpp  encryption.h  encryptor.cpp  encryptor.h
src/main/: filedatacompositor.cpp  filedatacompositor.h  filedatacompositor.h.autosave  generators.cpp  generators.h  hasher.cpp  hasher.h  logger.h  main_utils.cpp  main_utils.h  point.cpp  point.h
src/network/: connectionworker.cpp  connectionworker.h  databasehandler.cpp  databasehandler.h  exchangepacket.h  packetprocessor.cpp  packetprocessor.h  tcpclientinstance.cpp  tcpclientinstance.h  tcpserverinstance.cpp  tcpserverinstance.h  threadmanager.cpp  threadmanager.h  udpclientinstance.cpp  udpclientinstance.h  udpserverinstance.cpp  udpserverinstance.h
src/process/: configworker.cpp  configworker.h  (+17 more)
(+21 files in other folders)
